<resources>
    <string name="app_name">Shagarah</string>
    <string name="sign_in">تسجيل دخول</string>
    <string name="email">البريد الالكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="sign_up_now">قم بانشاء حساب الآن</string>
    <string name="dont_have_an_account">لا تملك حساب ؟</string>
    <string name="sign_up">انشاء حساب</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="already_have_an_account">"تمتلك حساب بالفعل ؟ "</string>
    <string name="request_status">حالة الطلب</string>
    <string name="tree_type">نوع الشجرة</string>
    <string name="request_timestamp">تاريخ انشاء الطلب</string>
    <string name="show_request">عرض الطلب</string>
    <string name="tree_code">كود الشجرة</string>
    <string name="more_details">مزيد من التفاصيل</string>
    <string name="tree_status">حالة الشجرة</string>
    <string name="current_requests">الطلبات الحالية</string>
    <string name="tree_analysis_request_title">طلب تحليل الشجرة</string>
    <string name="start_now">ابدأ الآن</string>
    <string name="write_your_question_here">اكتب سؤالك هنا</string>
    <string name="done">تم</string>
    <string name="cancel">الغاء</string>
    <string name="answer_following_questions">أجب على الأسئلة التالية</string>
    <string name="email_password_required_message">يجب ادخال البريد الالكتروني و كلمة السر</string>
    <string name="sign_out">تسجيل خروج</string>
    <string name="analysis_answer_added_successufly">تم اضافة اجابة الأسئلة</string>
    <string name="unkown_error">خطأ غير معروف</string>
    <string name="no_current_text_question">لا يوجد سؤال نصي</string>
    <string name="request_added_successfully">تم اضافة طلبك بنجاح</string>
    <string name="no_current_requests">لا يوجد طلبات حالية</string>
    <string name="uploading">جاري التحميل</string>
    <string name="all_questions_required_msg">يجب اجابة جميع الأسئلة</string>
    <string name="category">الصنف</string>
    <string name="add_rating_lbl">أضف تقييم</string>
    <string name="select_tree_type_hint">اختار نوع الشجرة</string>
    <string name="select_category_hint">اختار الصنف</string>
    <string name="add_afat_hint">أضف الآفات</string>
    <string name="other_string">أخرى</string>
    <string name="question_answer_string">الرد علي السؤال</string>
    <string name="add_your_answer_here_hint">اضف اجابتك علي السؤال هنا</string>
    <string name="skip">تخطي</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish">انهاء</string>
    <string name="next">التالي</string>

    <string-array name="default_options">
        <item>الحالة جيدة</item>
        <item>مشكلة بسيطة</item>
        <item>تحتاج تدخل عاجل</item>
    </string-array>

    <string-array name="plants_names">
        <item>البطاطس</item>
        <item>الطماطم</item>
        <item>البصل</item>
        <item>الباميا</item>
        <item>الشمام</item>
        <item>الجزر</item>
        <item>كوسة</item>
        <item>الخيار</item>
        <item>الملوخيه</item>
        <item>الفجل</item>
        <item>الثوم</item>
        <item>باذنجان</item>
        <item>كراث</item>
        <item>الفاصوليا</item>
        <item>المانجو</item>
        <item>النخيل</item>
        <item>العنب</item>
        <item>الموز</item>
        <item>فراولة</item>
        <item>كمثرى</item>
        <item>أفوكادو</item>
        <item>البرتقال</item>
        <item>اللوز</item>
        <item>الرمان</item>
        <item>التفاح</item>
        <item>الليمون</item>
        <item>اليوسفي</item>
        <item>البرقوق</item>
        <item>الجوافه</item>
        <item>التين</item>
        <item>لوبيا</item>
        <item>عدس</item>
        <item>فول</item>
        <item>بسله</item>
        <item>الذرة</item>
        <item>القمح</item>
        <item>الشعير</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="plants_images">
        <item>https://cdn-icons-png.flaticon.com/512/1652/1652077.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/2503/2503930.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/1998/1998121.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/2909/2909889.png</item>
        <item>https://images.vexels.com/media/users/3/128211/isolated/preview/af538d53a26ee71fe028abeac3a70782-melon-flat-circle-icon.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/271/271439.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/1515/1515034.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/7315/7315837.png</item>
        <item>https://flyclipart.com/thumb2/green-leaf-leaves-mentha-mint-peppermint-spearmint-icon-53071.png</item>
        <item>https://www.i2clipart.com/cliparts/b/a/1/2/clipart-radish-512x512-ba12.png</item>
        <item>https://png.pngtree.com/png-clipart/20200401/original/pngtree-garlic-cartoon-vector-png-image_5327892.jpg</item>
        <item>https://cdn-icons-png.flaticon.com/512/1147/1147561.png</item>
        <item>https://cdn-icons.flaticon.com/png/512/3137/premium/3137094.png?token=exp=1658762793~hmac=a0d152a106903b8640909d1d511f95c6</item>
        <item>https://cdn-icons-png.flaticon.com/512/3823/3823282.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/700/700804.png</item>
        <item>https://cdn-icons.flaticon.com/png/512/3850/premium/3850525.png?token=exp=1658761815~hmac=294a6790e7e0917f3b08be63dad7c3b5</item>
        <item>https://cdn-icons-png.flaticon.com/512/765/765560.png</item>
        <item>https://cdn.iconscout.com/icon/free/png-256/bananas-55-1176320.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/2790/2790229.png</item>
        <item>https://icons-for-free.com/download-icon-pear+icon-1320183033953910655_256.ico</item>
        <item>https://cdn-icons-png.flaticon.com/512/765/765559.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/135/135620.png</item>
        <item>https://cdn-icons.flaticon.com/png/512/5263/premium/5263329.png?token=exp=1658761872~hmac=24a41b7949af15492e8efb1955841c30</item>
        <item>https://cdn-icons.flaticon.com/png/512/3944/premium/3944202.png?token=exp=1658761898~hmac=f878434bd7b2e00fd71337ff84b6028e</item>
        <item>https://images.vexels.com/media/users/3/211226/isolated/preview/2f7c3081d70a8917a01a038553e97219-apple-flat.png</item>
        <item>https://cdn-icons.flaticon.com/png/512/2079/premium/2079250.png?token=exp=1658762723~hmac=05a19a4cc048b65dd40059835b1417f1</item>
        <item>https://cdn-icons.flaticon.com/png/512/628/premium/628235.png?token=exp=1658761942~hmac=172fb7424d985cefaa08315ffb94e37d</item>
        <item>https://cdn-icons-png.flaticon.com/512/1515/1515046.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/2045/2045020.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/1135/1135552.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/2224/2224180.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/7230/7230964.png</item>
        <item>https://cdn-icons.flaticon.com/png/512/2079/premium/2079285.png?token=exp=1658762074~hmac=c323cb761a33388785deeec08b7f1179</item>
        <item>https://cdn-icons.flaticon.com/png/512/2346/premium/2346964.png?token=exp=1658762103~hmac=a975982695b6327b0a92cee801a1312e</item>
        <item>https://cdn-icons.flaticon.com/png/512/895/premium/895140.png?token=exp=1658762143~hmac=eb7e8dc43decb73a3fe91884da91cbfc</item>
        <item>https://cdn-icons-png.flaticon.com/512/740/740889.png</item>
        <item>https://cdn-icons-png.flaticon.com/512/6678/6678131.png</item>

    </string-array>
</resources>