<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent_gray"
    android:weightSum="10">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/shagarah_logo"
            android:layout_gravity="top|center"
            android:layout_marginTop="32dp"/>

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        android:background="@drawable/white_bg_radius_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="32sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/user_name"
                android:textColor="@color/dark_gray"
                android:textFontWeight="800"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/user_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/cornered_gray_bg"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:gravity="start|center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/email"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/cornered_gray_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:gravity="start|center"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/password"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/cornered_gray_bg"
                android:gravity="start|center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="24dp"
                android:background="@drawable/cornered_accent_bg"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sign_in_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/tritary_gray"
                    android:textFontWeight="400"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>