<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    android:elevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/request_thumbnail_img_view"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:background="@color/transparent_gray"
            android:src="@drawable/shagarah_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".5" />

        <Button
            android:id="@+id/more_details_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/cornered_accent_bg"
            android:padding="8dp"
            android:text="@string/more_details"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_layout" />

        <TextView
            android:id="@+id/tree_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tree_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/request_thumbnail_img_view" />

        <LinearLayout
            android:id="@+id/rating_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/tree_category_label"
            app:layout_constraintTop_toBottomOf="@id/tree_status_value_text_view">

            <TextView
                android:id="@+id/add_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_rating_lbl"
                android:textColor="@color/colorAccentDark"
                app:layout_constraintStart_toStartOf="@id/request_answer_rating"
                app:layout_constraintTop_toTopOf="@id/tree_type_label" />

            <RatingBar
                android:id="@+id/request_answer_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:isIndicator="false"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:stepSize="1" />
        </LinearLayout>


        <TextView
            android:id="@+id/tree_type_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="مانجو"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tree_type_label" />

        <TextView
            android:id="@+id/tree_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tree_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tree_type_value_text_view" />

        <TextView
            android:id="@+id/tree_code_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="j3l-tree-mango"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tree_category_label" />

        <TextView
            android:id="@+id/tree_statue_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tree_code_value_text_view" />

        <TextView
            android:id="@+id/tree_status_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="جيدة"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tree_statue_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
