<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    android:elevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/request_thumbnail_img_view"
            android:layout_width="0dp"
            android:layout_height="164dp"
            android:layout_margin="8dp"
            android:background="@color/transparent_gray"
            android:src="@drawable/shagarah_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".5" />

        <Button
            android:id="@+id/show_request_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/cornered_accent_bg"
            android:paddingTop="4dp"
            android:text="@string/show_request"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timestamp_value_text_view" />

        <TextView
            android:id="@+id/request_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/request_thumbnail_img_view" />

        <TextView
            android:id="@+id/request_status_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="تحت المراجعة"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/request_status_label" />

        <TextView
            android:id="@+id/timestamp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/request_timestamp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/request_status_value_text_view" />

        <TextView
            android:id="@+id/timestamp_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:maxLines="2"
            android:text="الأحد 26/6/2022"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timestamp_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
